--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -14,7 +14,6 @@
             <button id="fetch-weather">Get Weather</button>
         </div>
         <div id="weather-info">
-            <!-- Weather information will be displayed here -->
         </div>
     </div>
     <script src="script.js"></script>
