--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>Weather App</h1>
-        <div class="input-section">
-            <input type="text" id="location-input" placeholder="Enter a location">
-            <button id="fetch-weather">Get Weather</button>
-        </div>
-        <div id="weather-info">
-        </div>
+      <h1>Weather Application</h1>
+      <div class="input-section">
+        <input type="text" id="location-input" placeholder="Enter a location" />
+        <button id="fetch-weather">Get Weather</button>
+      </div>
+      <div id="weather-info"></div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
